# eecs473-ChordSync

./: .clang-format  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
Altium/: .gitignore
Altium/Display_Control_Board/: Display_Control_Board.PcbDoc  Display_Control_Board.PrjPcb  MCU_Conn.SchDoc  Power_FETS.SchDoc
Altium/Display_Control_Board/__Previews/: MCU_Conn.SchDocPreview  MCU_FETS.SchDocPreview  Power_Conn.SchDocPreview  Power_FETS.SchDocPreview
Altium/NeckPCB/: 473 Fretboard.PrjPcb  Bottom.Cam  PCB1.PcbDoc  PCB2.PcbDoc  Sheet1.SchDoc
Altium/NeckPCB/Project Outputs for 473 Fretboard/: Design Rule Check - PCB1.drc  Design Rule Check - PCB1.html  Design Rule Check - PCB2.drc  Design Rule Check - PCB2.html  PCB2.1  PCB2.EXTREP  PCB2.GBL  PCB2.GBO  PCB2.GBP  PCB2.GBS  PCB2.GD1  PCB2.GG1  PCB2.GM  PCB2.GM1  PCB2.GM15  PCB2.GML  PCB2.GTL  PCB2.GTO  PCB2.GTP  PCB2.GTS  PCB2.REP  PCB2.apr  Status Report.Txt
Altium/NeckPCB/__Previews/: Sheet1.SchDocPreview
Display_Control_Board/: Display_Control_Board.PcbDoc  Display_Control_Board.PrjPcb  Display_Control_Board.PrjPcbStructure  MCU_Conn.SchDoc  MCU_FETS.SchDoc  Power_Conn.SchDoc  Power_FETS.SchDoc
Display_Control_Board/__Previews/: Buck_LDOs.SchDocPreview  Input Power.SchDocPreview  MCU_Conn.SchDocPreview  MCU_FETS.SchDocPreview
audiotest/: checkAudioOffset.py  comp.py  dataParse.py  midi_to_note.py  pyvenv.cfg  record_convert.py  test.py
fretboard/: .cproject  .mxproject  .project  CMakeLists.txt  fretboard.ioc
fretboard-dev/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  fretboard-dev.ioc
fretboard-dev-h7/: .cproject  .mxproject  .project  CMakeLists.txt  fretboard-dev-h7.ioc
fretboard-dev-h7/Core/Inc/: fretboard.hpp  hardware.hpp  main.h  new_main.h  stm32h7xx_hal_conf.h
fretboard-dev-h7/Core/Src/: fretboard.cpp  main.c  new_main.cpp  stm32h7xx_hal_msp.c
fretboard-dev/Core/Inc/: amp.hpp  fretboard.hpp  guitar.hpp  hardware.hpp  lcd.hpp  main.h  messaging.hpp  new_main.h  parser.hpp  stm32h5xx_hal_conf.h  stm32h5xx_it.h
fretboard-dev/Core/Src/: fretboard.cpp  lcd.cpp  main.c  new_main.cpp  stm32h5xx_hal_msp.c  stm32h5xx_it.c
fretboard/Core/Inc/: chords.hpp  fretboard.hpp  lcd.hpp  main.h  messaging.hpp  stm32h5xx_hal_conf.h  stm32h5xx_it.h  timing.hpp
fretboard/Core/Src/: fretboard.cpp  lcd.cpp  main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
inc/: Fretboard.hpp  fretboard.hpp  hardware.hpp  lcd.hpp  web.hpp  web_sources.hpp
jlc-lib/: JLC_25.PcbLib  JLC_25.SchLib
jlc-lib/Project Outputs for JLC_25/: JLC_25.IntLib
lib/: amp.hpp  fretboard.hpp  guitar.hpp  hardware.hpp  lcd.hpp  messaging.hpp  serial.hpp  timing.hpp
lib/inc/: fretboard.hpp  hardware.hpp  lcd.hpp
lib/src/: fretboard.cpp  lcd.cpp
port_H5/: .cproject  .mxproject  .project  port_H5.ioc
port_H5/Core/Inc/: main.h  stm32h5xx_hal_conf.h
port_H5/Core/Src/: main.c  stm32h5xx_hal_msp.c
pyBindStuff/: CMakeLists.txt
pyBindStuff/include/: data.hpp  messaging.hpp  playerMode.hpp
pyBindStuff/src/: main.cpp  playerMode.cpp
pyBindStuff/src/py/: dataParse.py
rpi-backend/: CMakeLists.txt
rpi-backend/include/: analyze.hpp  data.hpp  guitar.hpp  mcu.hpp  messaging.hpp  playerMode.hpp  process_gp4.hpp  serial.hpp  timing.hpp  web.hpp  web_sources.hpp
rpi-backend/public/: compiled.css  htmx.js  htmx.rt.js  htmx.sse.js  index.html  style.css
rpi-backend/public/components/: button.html  chordselectform.html  error.html  songinfo.html  songselectform.html
rpi-backend/py/: dataParse.py  parse_gp_files.py  record_convert.py  requirements.txt
rpi-backend/py/gp_files/: Jingle_bells.gp5  Mary_had_a_little_lamb.gp5
rpi-backend/scripts/: compile_tailwind.sh  generate_web_sources.sh  setup.sh  startup.service
rpi-backend/src/: data.cpp  main.cpp  mcu.cpp  playerMode.cpp  serial.cpp  web.cpp
scripts/: ansible.sh  compile_tailwind.sh  generate_web_sources.sh
scripts/ansible/: rpi.yml
scripts/ansible/roles/nginx/tasks/: main.yml
scripts/ansible/roles/rpi/files/: interfaces  web_server.service
scripts/ansible/roles/rpi/tasks/: main.yml
self_LCD_test/: .cproject  .mxproject  .project  STM32L4R5ZITXP_FLASH.ld  STM32L4R5ZITXP_RAM.ld  port_LCD.ioc
self_LCD_test/Core/Inc/: font12.h  font16.h  font20.h  font24.h  font8.h  fonts.h  main.h  stm32l4xx_hal_conf.h
self_LCD_test/Core/Src/: ILI9486.c  main.c  stm32l4xx_hal_msp.c
src/fretboard/: .cproject
src/fretboard-dev/: .mxproject
src/fretboard-dev/Core/Inc/: fretboard.hpp  hardware.hpp  lcd.hpp  stm32h5xx_hal_conf.h
src/fretboard-dev/Core/Src/: lcd.cpp  new_main.cpp
src/fretboard/Core/Src/: main.c  new_main.cpp  stm32h5xx_hal_msp.c
src/fw/fretboard/: .mxproject  .project  STM32H562RGTX_FLASH.ld  STM32H562RGTX_RAM.ld  fretboard.ioc
src/fw/fretboard-dev/: .cproject  .mxproject  .project  fretboard-dev.ioc
src/fw/fretboard-dev/Core/Inc/: main.h  stm32h5xx_hal_conf.h
src/fw/fretboard-dev/Core/Src/: main.c  stm32h5xx_hal_msp.c
src/fw/fretboard/Core/Inc/: main.h  stm32h5xx_hal_conf.h
src/fw/fretboard/Core/Src/: main.c  stm32h5xx_hal_msp.c
src/web-server/: CMakeLists.txt  main.cpp  web.cpp
src/web-server/public/: style.css
web-server/: CMakeLists.txt
web-server/include/: web.hpp  web_sources.hpp
web-server/public/: index.html
web-server/public/components/: songselectform.html
web-server/scripts/: generate_web_sources.sh
web-server/src/: main.cpp  web.cpp
