cmake_minimum_required(VERSION 3.5)

project(eecs473)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # IDE support

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
set(BUILD_SHARED_LIBS OFF) # STATIC

add_subdirectory(extern) # THIRD PARTY LIBRARIES
add_subdirectory(src/web-server)
